<resources>
    <string name="app_name">RideBike</string>
    <string name="morning_rides">Morning Rides</string>
    <string name="long_tours">Long Tours</string>
    <string name="offroading">Offroading</string>
    <string name="bicycle_rides">Bicycle Rides</string>
    <string name="solo_rides">Solo Rides</string>
    <string name="group_rides">Group Rides</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="select_interest_subheading">So that you see the best curated content.\nMinimum of two required.</string>
    <string name="select_interest_heading">Select Your Interests</string>
    <string name="next">Next</string>
    <string name="vehicle_detail_heading">Vehicle Details</string>
    <string name="skip">Skip</string>
    <string name="vehicle_detail_subheading">Let\'s add your vehicle details so that the app does the boasting.</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="type">Type</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="company">Company</string>
    <string name="add_friends_subheading">Let\'s add some friends from your phonebook to ride with</string>
    <string name="add_friends">Add Friends</string>
    <string name="demo_name_one">Abhishek Singh</string>
    <string name="demo_name_two">Rijul Prakash</string>
    <string name="demo_name_three">Alya Ford</string>
    <string name="join_group_heading">Be a part of Groups</string>
    <string name="join_group_subheading">Join groups near you so that you always have people to ride with</string>
    <string name="join">JOIN</string>
    <string name="request">REQUEST</string>
    <string name="open">&#160;Open</string>
    <string name="closed">&#160;Closed</string>
    <string name="demo_size_one">100 Members -</string>
    <string name="demo_size_two">25 Members -</string>
    <string name="demo_size_three">10 Members -</string>
    <string name="demo_group_name_one">Dawn Dusters</string>
    <string name="demo_group_name_two">Sons of Anarchy</string>
    <string name="demo_group_name_three">Offroad Kings</string>
    <string name="_10_friends_found">10 Friends Found</string>
    <string name="select_all">Select All</string>
    <string name="_3_groups_found">3 Groups Found</string>
    <string name="user_name">John Parker</string>
    <string name="home_view_heading_one">Amazing Ride in the Mountains</string>
    <string name="home_view_heading_two">Delhi - Manali on 24th March</string>
    <string name="home_view_time_one">1 Hour Ago</string>
    <string name="home_view_time_two">7 Hours Ago</string>
    <string name="all">All</string>
    <string name="rides">Rides</string>
    <string name="activities">Activities</string>
    <string name="riding_news">Riding News</string>
    <string name="shop">Shop</string>
    <string name="ridebike">RideBike</string>
    <string name="login_with">Login with :</string>
    <string name="email_alert">Please enter valid email id</string>
    <string name="email_empty">Email is Empty</string>
    <string name="password_empty">Password is Empty</string>
    <string name="name_alert">Please enter valid name</string>
    <string name="password_alert">Please enter valid password</string>
    <string name="mobile_alert">Please enter valid mobile number</string>
    <string name="mobile">Mobile Number</string>
    <string name="date_alert">Please select valid date</string>
    <string name="confirm_password_alert">Confirm password does not match with word</string>


    <string name="bell_icon">u</string>
    <string name="search_icon">n</string>
    <string name="profile_title_one">My Location</string>
    <string name="profile_title_two">My Vehicles</string>
    <string name="profile_title_three">My Rides</string>
    <string name="profile_title_four">Saved Stuff</string>
    <string name="profile_sub_item_one">NCR-Noida</string>
    <string name="profile_sub_item_two">Ducati Diavel</string>
    <string name="profile_sub_item_three">25</string>
    <string name="profile_sub_item_four">25</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="home_header_menu_icon">o</string>
    <string name="home_header_right_icon">n</string>
    <string name="create_a_group">Create a Group</string>
    <string name="schedule_a_ride">Schedule a Ride</string>
    <string name="create_a_post">Create a Post</string>
    <string name="creare_grp_icon">d</string>
    <string name="schedule_ride_icon">q</string>
    <string name="create_post_icon">a</string>
    <string name="share_icon">v</string>
    <string name="comment_icon">w</string>
    <string name="empty_heart_icon">x</string>
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>
    <string name="filters">Filters</string>
    <string name="search">Search</string>
    <string name="your_groups">Your Groups</string>
    <string name="nearby_groups">Nearby Groups</string>
    <string name="sos">SOS</string>
    <string name="veteran_rider">Veteran Rider</string>

    <string name="sign_up_with">Sign up with :</string>
    <string name="verify_mob_number">Verify Your Mobile No.</string>
    <string name="verify_number_subheading">So that your friends on the app can get in touch with you whenever they want.</string>
    <string name="enter_number">Enter your mobile number</string>
    <string name="name_ride">Name of the Ride</string>
    <string name="description">Description</string>
    <string name="single_day_ride">Is it a single day ride?</string>
    <string name="time">Start Time</string>
    <string name="date">Start Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="meeting_point">Meeting Point</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="set_password">Set Password</string>
    <string name="forgetPassSubHeading">Just give us your mobile number and we will send an OTP to verify it.</string>
    <string name="forgetPass">Forget Password</string>
    <string name="enter_new_pass">Enter New Password</string>
    <string name="confirm_pass">Confirm New Password</string>
    <string name="enter_new_pass_subheading">Enter your new password and remember it this time.</string>
    <string name="you_can_login">You can now login using your new Password.</string>
    <string name="pass_reset_success">Password Reset Successfully!</string>
    <string name="goto_login">Go To Login</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_subheading">Please enter the 4 digit OTP sent on your mobile number </string>
    <string name="is_it_a_private_ride_or_can_anyone_join">Is it a private ride or can anyone join?</string>
    <string name="do_you_want_to_invite_friends_or_whole_group">Do you want to invite friends or whole group?</string>
    <string name="riding">Riding</string>
    <string name="vehice">Vehicle</string>
    <string name="trip">Trip</string>
    <string name="end_point">End Point</string>
    <string name="chasing_the_sun">Chasing the sun</string>
    <string name="a_ride_towards_east_during_sunrise">A ride towards east during sunrise.</string>
    <string name="single">Single</string>
    <string name="more_than_a_day">More than a day</string>
    <string name="yamuna_expressway_entry_no_4">Yamuna Expressway Entry No. 4</string>
    <string name="yamuna_expressway_entry_no_20">Yamuna Expressway Entry No. 20</string>
    <string name="private_trip">Private</string>
    <string name="public_trip">Public</string>
    <string name="camping">Camping</string>
    <string name="trekking">Trekking</string>
    <string name="biker_event">Biker Events</string>
    <string name="ride_start_loc">Ride Start Location</string>
    <string name="ride_end_loc">Ride End Location</string>
    <string name="end_time">End Time</string>
    <string name="end_date">End Date</string>
    <string name="halt_loc">Halt Location</string>
    <string name="one_halt_loc">Halt Location 1</string>
    <string name="demo_date_one">Day 1 – 30th March</string>
    <string name="demo_date_two">Day 2 – 31th March</string>
    <string name="demo_date_three">Day 3 – 1st April</string>
    <string name="save">Save</string>
    <string name="title_activity_maps">Map</string>
    <string name="success_ride_heading">Your ride is created successfully!</string>
    <string name="success_ride_subheading">The notifications and invites\nhave been sent to the riders.</string>
    <string name="done">Done</string>
    <string name="ride_created">Ride Created Successfully</string>
    <string name="your_rides">Your Rides</string>
    <string name="upcoming_rides">Upcoming Rides</string>
    <string name="past_rides">Past Rides</string>
    <string name="back_icon">C</string>
    <string name="title_activity_maps_view">Map</string>
    <string name="login_title">Login</string>
    <string name="number_error">Enter 10 digit number to proceed</string>
    <string name="otp_error">Enter 4 digit number to proceed</string>


    <string name="name_group">Name of the Group</string>
    <string name="name_state">State</string>
    <string name="name_city">City</string>
    <string name="first_plan">First Plan (Status)</string>
    <string name="will_the_group_be_private_or_can_anyone_join">Will the group be private or can anyone join?</string>
    <string name="halt_demo_text_one">Chandigarh</string>
    <string name="time_tv">Time</string>
    <string name="time_icon">z</string>
    <string name="demo_time">06:00 AM</string>
    <string name="date_icon">y</string>
    <string name="one_way">One way</string>
    <string name="two_way">Two way</string>
    <string name="trip_history">Trips History</string>
    <string name="state_one">Delhi</string>
    <string name="state_two">Haryana</string>
    <string name="state_three">Noida</string>
    <string name="save_btn_click">Save button clicked</string>
    <string name="first_plan_enter">Please enter the first plan (status)</string>
    <string name="enter_desc">Please enter the group description</string>
    <string name="enter_group_name">Please enter the group name</string>
    <string name="enter_string_loc">Please enter the trip to location</string>
    <string name="from_loc">Please enter the trip from location</string>
    <string name="trip_name">Please enter the trip name</string>
    <string name="select_start_date">Please select start date</string>
    <string name="select_start_end">Please select start and end date</string>

</resources>
