<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <!--Menu icon-->
    <com.ridebike.custom.icons.CustomIcon
        android:id="@+id/menu_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/header_heading_mStart"
        android:layout_marginTop="@dimen/header_heading_mTop"
        android:text="@string/home_header_menu_icon"
        android:textSize="@dimen/home_header_menu_icon_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Back icon-->
    <com.ridebike.custom.icons.CustomIcon
        android:id="@+id/back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/header_heading_mStart"
        android:layout_marginTop="@dimen/header_heading_mTop"
        android:text="@string/back_icon"
        android:visibility="gone"
        android:textSize="@dimen/home_header_menu_icon_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Search/bell icon-->
    <com.ridebike.custom.icons.CustomIcon
        android:id="@+id/header_right_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/header_heading_mStart"
        android:text="@string/home_header_right_icon"
        android:textSize="@dimen/home_header_right_icon_size"
        app:layout_constraintBottom_toBottomOf="@id/menu_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/menu_icon" />

    <!--Heading text-->
    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_ui_display_heavy"
        android:text="@string/ridebike"
        android:textColor="@color/select_interest_heading_color"
        android:textSize="@dimen/home_header_text_size"
        app:layout_constraintBottom_toBottomOf="@id/menu_icon"
        app:layout_constraintEnd_toStartOf="@id/header_right_icon"
        app:layout_constraintStart_toEndOf="@id/menu_icon"
        app:layout_constraintTop_toTopOf="@id/menu_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>